# gputop

./: meson.build
lib/: gputop-client-context.c  gputop-oa-metrics.c
mesa/: meson.build
mesa/src/util/: u_debug.c
server/: gputop-perf.c  gputop-perf.h  gputop-server.c
ui/: gputop-ui-main.cpp
